[package]
name = "aeolus"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
aeolus-common = { path = "../aeolus-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
mac_address = "1.1.5"
tokio-icmp-echo = "0.4.1"
futures = "0.3.30"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[[bin]]
name = "aeolus"
path = "src/main.rs"
